--- a/GeekBrains/index.html
+++ b/GeekBrains/index.html
@@ -2,22 +2,31 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="icon" href="./img/icon.png" type="images/png">
 	<title>Minto</title>
-	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="container">
 		<header class="clearfix">
 			<div class="logo">
-				<img src="img/logo.png" alt="logo">
+				<img src="./img/logo.png" alt="logo">
 			</div>
 			<ul class="menu">
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About Us</a></li>
-				<li><a href="#">Services</a></li>
-				<li><a href="#">Conatct Us</a></li>
+				<li><a class="menu_a" href="#"><i class="icon-mail"></i>Conatct Us</a></li>
+				<li><a class="menu_a" href="#"><i class="icon-cog"></i>Services</a></li>
+				<li><a class="menu_a" href="#"><i class="icon-user"></i>About Us</a></li>
+				<li><a class="menu_a" href="#"><i class="icon-home"></i>Home</a></li>
 			</ul>
 		</header>
+		<main>
+			<div class="image">
+				<h1 class="minto">Minto</h1>
+			</div>
+		</main>
+		<footer>
+			
+		</footer>
 	</div>
 </body>
 </html>
