Изображение/текст+текс/блок-2+обтекаемая картинка/текст/ссылка
1. Уже до конца отредактировал изображение с текстом на нем с помощью margin. Две часте текста разными стилями.
2. Создание следуещего текста в блоке с верхней и нижней границей. Превая часть текста отличается по стилям!
3. Создание 3-го блока с обтекаемой текстом картинкой и текстом соответственно!
4.  Добавление и редактирование ссылки "read more"/

--- a/GeekBrains/index.html
+++ b/GeekBrains/index.html
@@ -20,8 +20,18 @@
 			</ul>
 		</header>
 		<main>
-			<div class="image">
-				<h1 class="minto">Minto</h1>
+			<div class="block_1">
+					<h1 class="minto">Minto</h1><br>
+					<p class="minto_2">A minimal Web Design from cssauthor.com</p>
+			</div>
+			<div class="block_2">
+				<p class="lorem"><span class="lorem_1">Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit. Nihil possimus assumenda sit minima obcaecati fuga veritatis harum mollitia, eligendi quaerat, voluptas soluta provident modi ut quod, laudantium cumque velit dolores!</p>
+			</div>
+			<div class="block_3">
+				<img src="./img/fon_2.jpg" alt="fon2" class="fon_2">
+				<p class="lorem_3">Lorem ipsum dolor sit amet</p>
+				<p class="lorem_4">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+				<a href="#" class="read_more">Read more&nbsp;&#10144;</a>
 			</div>
 		</main>
 		<footer>
