--- a/GeekBrains/index.html
+++ b/GeekBrains/index.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<header class="clearfix">
 			<div class="logo">
-				<img src="./img/logo.png" alt="logo">
+				<a href="#"><img src="./img/logo.png" alt="logo"></a>
 			</div>
 			<ul class="menu">
 				<li><a class="menu_a" href="#"><i class="icon-mail"></i>Conatct Us</a></li>
@@ -31,11 +31,20 @@
 				<img src="./img/fon_2.jpg" alt="fon2" class="fon_2">
 				<p class="lorem_3">Lorem ipsum dolor sit amet</p>
 				<p class="lorem_4">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-				<a href="#" class="read_more">Read more&nbsp;&#10144;</a>
+				<a href="#" class="read_more">Read more&nbsp;<i class="icon-right"></i></a>
+			</div>
+			<div class="block_4">
+				<p><span class="lorem_5">Where</span>&nbsp;<span class="lorem_6">We Have Been Featured</span></p>
+				<img src="./img/line.jpg" alt="line" class="line">
+			</div>
+			<div class="block_5">
+				<img src="./img/fon_3.jpg" alt="fon" class="fon_3">
 			</div>
 		</main>
 		<footer>
-			
+			<p class="copy"><a href="#"><span class="BOD">BOD</span></a> &copy; Copyright 2019 &ndash; All rights reserved!</p>
+			<a href="#"><span class="icon-twitter-circled"></span></a>
+			<a href="#"><span class="icon-facebook-circled"></span></a>
 		</footer>
 	</div>
 </body>
