Блок4+блок5+footer= конец шаблона!

--- a/GeekBrains/index.html
+++ b/GeekBrains/index.html
@@ -42,7 +42,7 @@
 			</div>
 		</main>
 		<footer>
-			<p class="copy"><a href="#"><span class="BOD">BOD</span></a> &copy; Copyright 2019 &ndash; All rights reserved!</p>
+			<p class="copy"><a href="#"><span class="BOD">BOD</span></a> &copy; Copyright 2019 &ndash; All rights reserved</p>
 			<a href="#"><span class="icon-twitter-circled"></span></a>
 			<a href="#"><span class="icon-facebook-circled"></span></a>
 		</footer>
