--- a/GeekBrains/index.html
+++ b/GeekBrains/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="./css/style.css">
 	<link rel="icon" href="./img/icon.png" type="images/png">
-	<title>Minto</title>
+	<title>MinGreen</title>
 </head>
 <body>
 	<div class="container">
@@ -21,16 +21,16 @@
 		</header>
 		<main>
 			<div class="block_1">
-					<h1 class="minto">Minto</h1><br>
-					<p class="minto_2">A minimal Web Design from cssauthor.com</p>
+					<h1 class="minto">MinGreen</h1><br>
+					<p class="minto_2">We will save our planet. Plant a tree.</p>
 			</div>
 			<div class="block_2">
-				<p class="lorem"><span class="lorem_1">Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit. Nihil possimus assumenda sit minima obcaecati fuga veritatis harum mollitia, eligendi quaerat, voluptas soluta provident modi ut quod, laudantium cumque velit dolores!</p>
+				<p class="lorem"><span class="lorem_1">MinGreen,</span> this is an organization that has been engaged in the greening of the planet Earth since 1964. We plant trees for a better world. Help us children to save our future</p>
 			</div>
 			<div class="block_3">
-				<img src="./img/fon_2.jpg" alt="fon2" class="fon_2">
-				<p class="lorem_3">Lorem ipsum dolor sit amet</p>
-				<p class="lorem_4">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+				<img src="./img/img_mexico.jpg" alt="mexico" class="fon_2">
+				<p class="lorem_3">One Day in Mexico</p>
+				<p class="lorem_4">It’s planting season on our reforestation area. An interview with forest engineer Alejandra.</p>
 				<a href="#" class="read_more">Read more&nbsp;<i class="icon-right"></i></a>
 			</div>
 			<div class="block_4">
@@ -42,7 +42,7 @@
 			</div>
 		</main>
 		<footer>
-			<p class="copy"><a href="#"><span class="BOD">BOD</span></a> &copy; Copyright 2019 &ndash; All rights reserved</p>
+			<p class="copy"><a href="#"><span class="BOD">Y.Bodnar</span></a> &copy; Copyright 2019 &ndash; All rights reserved</p>
 			<a href="#"><span class="icon-twitter-circled"></span></a>
 			<a href="#"><span class="icon-facebook-circled"></span></a>
 		</footer>
